# 2023_1_TrudoGOliki

./: .gitignore  CMakeLists.txt  README.md  client.hpp  main.cpp
lib/avl_tree/include/: avl_tree.hpp
lib/avl_tree/src/: avl_tree.cpp
lib/cli/: CMakeLists.txt
lib/cli/include/: IExecutable.hpp  Option.hpp  cli.hpp  cli_cmds.hpp
lib/cli/src/: IExecutable.cpp  Option.cpp  cli.cpp
lib/cli/src/cli_cmds/: help.cpp  hidefile.cpp  lookfile.cpp  sharefile.cpp  status.cpp
lib/cli/tests/: CMakeLists.txt
lib/cli/tests/src/: test_cli.cpp
lib/file/include/: file.hpp
lib/file/src/: file.cpp
lib/file_system/: CMakeLists.txt
lib/file_system/include/: avl_tree_search.hpp  file_system.hpp  manager_files_cli.hpp  manager_files_net.hpp
lib/file_system/lib/avl_tree/: CMakeLists.txt
lib/file_system/lib/avl_tree/include/: avl_tree.hpp
lib/file_system/lib/avl_tree/src/: avl_tree.cpp
lib/file_system/lib/buffer/: CMakeLists.txt
lib/file_system/lib/buffer/include/: buffer.hpp
lib/file_system/lib/buffer/src/: buffer.cpp
lib/file_system/lib/buffer/tests/: CMakeLists.txt
lib/file_system/lib/buffer/tests/src/: test_buffer.cpp
lib/file_system/lib/constants/: CMakeLists.txt
lib/file_system/lib/constants/include/: constants.hpp  main_dir.hpp  standard_buffer_size.hpp
lib/file_system/lib/constants/src/: main_dir.cpp  standard_buffer_size.cpp
lib/file_system/lib/errors/: CMakeLists.txt
lib/file_system/lib/errors/include/: buf_error.hpp  errors.hpp  fs_error.hpp
lib/file_system/lib/errors/src/: buf_error.cpp  errors.cpp  fs_error.cpp
lib/file_system/lib/file/: CMakeLists.txt
lib/file_system/lib/file/include/: file.hpp
lib/file_system/lib/file/src/: file.cpp
lib/file_system/lib/iserializable/: CMakeLists.txt
lib/file_system/lib/iserializable/include/: iserializable.hpp
lib/file_system/lib/iserializable/src/: iserializable.cpp
lib/file_system/lib/sha256/: CMakeLists.txt
lib/file_system/lib/sha256/include/: sha256.hpp
lib/file_system/lib/sha256/src/: sha256.cpp
lib/file_system/src/: avl_tree_search.cpp  file_system.cpp  manager_files_cli.cpp  manager_files_net.cpp
lib/network/: CMakeLists.txt
lib/network/include/: connection.hpp  server.hpp  socket.hpp  socket_address.hpp
lib/network/src/: connection.cpp  server.cpp
lib/protocol/: CMakeLists.txt
lib/protocol/include/: protocol.hpp
lib/protocol/src/: aplication.cpp  protocol.cpp
lib/utils/: CMakeLists.txt
lib/utils/src/: table.cpp
src/: main.cpp  tmp.cpp
src_cli/: CMakeLists.txt  cli.cpp
src_deamon/: CMakeLists.txt  deamon.cpp
